CREATE TABLE "modules" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" string NOT NULL,
  "version" string NOT NULL
);

CREATE TABLE "ontology_concepts" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" string NOT NULL,
  "selectable" bool,
  "module_id" integer,
  "parent_id" integer
);

CREATE TABLE "filters" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "concept_id" integer
);

CREATE TABLE "termcodes" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" string,
  "system" string,
  "display" string
);

CREATE TABLE "ontology_concepts_termcodes" (
  "ontology_concepts_id" integer,
  "termcodes_id" integer,
  PRIMARY KEY ("ontology_concepts_id", "termcodes_id")
);

ALTER TABLE "ontology_concepts_termcodes" ADD FOREIGN KEY ("ontology_concepts_id") REFERENCES "ontology_concepts" ("id");

ALTER TABLE "ontology_concepts_termcodes" ADD FOREIGN KEY ("termcodes_id") REFERENCES "termcodes" ("id");


ALTER TABLE "ontology_concepts" ADD FOREIGN KEY ("module_id") REFERENCES "modules" ("id");

ALTER TABLE "ontology_concepts" ADD FOREIGN KEY ("parent_id") REFERENCES "ontology_concepts" ("id");

ALTER TABLE "filters" ADD FOREIGN KEY ("concept_id") REFERENCES "ontology_concepts" ("id");